tests/compile_fail/req_lt_pointer.cc
// SPDX-License-Identifier: MIT
#include <umitest/test.hh>

void test() {
    umi::test::Suite s("x");
    s.run("x", [](auto& ctx) { ctx.require_lt("a", "b"); });
}
